syntax = "proto3";
package api;
option go_package = ".";

service GuessTheNumber{
  rpc Play(GuessRequest) returns (GuessResponse) {}
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (Response) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc GetAllUsers(GetAllRequest) returns (GetAllResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (Response) {}
}

message GetAllRequest {}

message UpdateUserRequest{
  string accessToken = 1;
  Player player = 2;
  string id = 3;
}

message CreateUserRequest{
  string name = 1;
}

message CreateUserResponse{
  int32 id = 1;
  int32 points = 2;
}

message GetAllResponse{
  repeated Player player = 1;
}

message Response {}

message GuessRequest{
  int32 x = 1;
}

message GuessResponse{
  int32 result = 1;
}

message GetUserRequest{
  string accessToken = 1;
  string id = 2;
}

message DeleteUserRequest{
  string id = 2;
}

message GetUserResponse{
  Player player = 1;
}

message Player{
  string id = 1;
  string name = 2;
  int32 points = 3;
}